# decent-auth-rs

./: Cargo.toml  build_wasm.sh
decentauth-sqlite/: Cargo.toml
decentauth-sqlite/src/: lib.rs
examples/: axum.rs
src/: admin_code.rs  atproto.rs  email.rs  fedcm.rs  fediverse.rs  kv.rs  lib.rs  oauth.rs  oidc.rs  qr.rs  server.rs  session.rs  template.rs  wasm.rs  webfinger.rs
templates/: approve_code.html  approve_oauth.html  error.html  header.html  index.html  login.html  login_admin_code.html  login_atproto.html  login_email.html  login_fedcm.html  login_fediverse.html  login_qr.html  qr_approved.html  qr_link.html
tools/: concurrency_tester.js
