[package]
name = "decentauth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
mustache = "*"
serde = { version = "1.0", features = ["derive"] }
#openidconnect = { version = "3.5.0", default-features = false }
openidconnect = { version = "3.5.0" }
extism-pdk = "1.3.0"
url = "2.5.3"
serde_json = "1.0.133"
cookie = "0.18.1"
webfinger = "0.5.1"
http = "1.1.0"
bytes = "1.9.0"

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }
axum = "0.7.9"
axum-macros = "0.4.2"
