[workspace]

[workspace.dependencies]

[package]
name = "decentauth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
mustache = "*"
serde = { version = "1.0", features = ["derive"] }
#openidconnect = { version = "3.5.0", default-features = false }
openidconnect = { version = "3.5.0" }
extism-pdk = "1.3.0"
url = "2.5.3"
serde_json = "1.0.133"
cookie = "0.18.1"
webfinger = "0.5.1"
http = "1.1.0"
bytes = "1.9.0"
atrium-api = { path = "../atrium/atrium-api" }
atrium-xrpc = { path = "../atrium/atrium-xrpc" }
atrium-common = { path = "../atrium/atrium-common" }
atrium-identity = { path = "../atrium/atrium-oauth/identity" }
atrium-oauth-client = { path = "../atrium/atrium-oauth/oauth-client", default-features = false }
chrono = "0.4.39"
rand = "0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.41.1", features = ["rt"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.41.1", features = ["full"] }
reqwest = "0.12.9"

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }
axum = "0.7.9"
axum-macros = "0.4.2"
decentauth-sqlite = { path = "./decentauth-sqlite" }
